--- a/views/html/login.html
+++ b/views/html/login.html
@@ -5,51 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="../css/index.css"  rel="stylesheet"/>
-    <title>Document</title>
+    <title>Sign In</title>
 </head>
 <body>
-
-    <!-- navbar -->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <!-- <a class="navbar-brand daystar" href="index.html">Daystar</a> -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle nav-menu" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Login
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="adminlogin.html">Admin</a></li>
-                  <li><a class="dropdown-item" href="adminlogin.html">Sitter</a></li>
-                  <li><a class="dropdown-item" href="adminlogin.html">Baby</a></li>
-                  <li><a class="dropdown-item" href="adminlogin.html">Cashier</a></li>
-                </ul>
-              </li>
-            </ul>
+  <section class="container mt-5">
+      <div class="row justify-content-center">
+          <div class="col-md-6">
+              <div class="card">
+                  <h5 class="card-header">Sign In</h5>
+                  <div class="card-body">
+                      <form id="loginForm" class="form">
+                          <div class="mb-3">
+                              <label for="email" class="form-label">Email address</label>
+                              <input type="email" class="form-control" id="email" name="email" required>
+                          </div>
+                          <div class="mb-3">
+                              <label for="password" class="form-label">Password</label>
+                              <input type="password" class="form-control" id="password" name="password" required>
+                          </div>
+                          <button type="submit" class="btn btn-primary">Sign In</button>
+                          <p class="mt-2">Don't have an account? <a href="signup.html">Sign up here</a></p>
+                      </form>
+                  </div>
+              </div>
           </div>
-        </div>
-      </nav>
+      </div>
+  </section>
 
-
-     <!-- heading section -->
-     <section>
-        <div class="main-heading">
-            <h3 class="header">Daystar day care system</h3>
-        </div>
-
-        <!-- image sction -->
-        <div>
-            <img src="../images/badge.jpg" alt="badge" class="hero-image">
-        </div>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+  <script src="../../public/js/login.js"></script> 
 </body>
 </html>
