--- a/views/html/signup.html
+++ b/views/html/signup.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../../public/css/signup.css">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
+
+    <link rel="stylesheet" type="text/css" href="../../public/css/signup.css">
     <title>Signup</title>
 </head>
 <body>
