--- a/views/html/login.html
+++ b/views/html/login.html
@@ -1,37 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../../public/css/index.css"  rel="stylesheet"/>
-    <title>Sign In</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="../../public/css/loginpage.css"  rel="stylesheet"/>
 </head>
 <body>
-  <section class="container mt-5">
-      <div class="row justify-content-center">
-          <div class="col-md-6">
-              <div class="card">
-                  <h5 class="card-header">Sign In</h5>
-                  <div class="card-body">
-                      <form id="loginForm" class="form">
-                          <div class="mb-3">
-                              <label for="email" class="form-label">Email address</label>
-                              <input type="email" class="form-control" id="email" name="email" required>
-                          </div>
-                          <div class="mb-3">
-                              <label for="password" class="form-label">Password</label>
-                              <input type="password" class="form-control" id="password" name="password" required>
-                          </div>
-                          <button type="submit" class="btn btn-primary">Sign In</button>
-                          <p class="mt-2">Don't have an account? <a href="signup.html">Sign up here</a></p>
-                      </form>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-
-  <script src="../../public/js/login.js"></script> 
+  <div class="form-container">
+    <h2>Login</h2>
+    <form id="loginForm">
+        <input type="email" id="email" name="email" placeholder="Email" required>
+        <input type="password" id="password" name="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+    </form>
+    <p>Don't have an account? <a href="signup.html">Sign up</a></p> 
+    </div>
+    <script src="../../public/js/login.js"></script>
 </body>
 </html>
