Styling the navbar

--- a/views/html/index.html
+++ b/views/html/index.html
@@ -30,6 +30,7 @@
 
         .navbar-brand img {
             height: 50px; 
+            border-radius: 50%;
             margin-right: 10px;
         }
 
