Refactor: admin dashboard to add release baby functionality

--- a/views/html/babiesform.html
+++ b/views/html/babiesform.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <div class="form-container">
-    <h2 class="header">Adding a Baby</h2>
+    <!-- <h2 class="header">Adding a Baby</h2> -->
     <form id="registerBabyForm">
         <input type="text" class="form-control" id="babyname" placeholder="Baby Name">
         <select class="form-select" id="gender">
