refactoring js to have a useEffect for removed babies

--- a/views/html/admindashboard.html
+++ b/views/html/admindashboard.html
@@ -91,6 +91,7 @@
             <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('newSitter.html');" class="list-group-item list-group-item-action bg-light">Register Babysitter</a>
             <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('allSeaters.html');" class="list-group-item list-group-item-action bg-light">All Sitters</a>
             <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('releaseBaby.html');" class="list-group-item list-group-item-action bg-light">All Babies</a>
+            <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('releaseBaby.html');" class="list-group-item list-group-item-action bg-light">Daily Payment </a>
             <a href="javascript:void(0);" id = "sidebar-items" onclick="loadContent('procurement.html');" class="list-group-item list-group-item-action bg-light">Procurement Corner</a>
             <a href="index.html" id = "sidebar-items" class="list-group-item list-group-item-action bg-light">Logout</a>
         </div>
