--- a/views/html/babiesform.html
+++ b/views/html/babiesform.html
@@ -11,6 +11,7 @@
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            overflow-y: auto;
         }
 
         .header {
@@ -46,7 +47,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2 class="header">Adding a Baby</h2>
+        <!-- <h2 class="header">Adding a Baby</h2> -->
         <form id="searchBabyForm">
             <input type="text" class="form-control" id="babyAccess" placeholder="Enter Access Number">
             <button type="button" class="btn btn-primary" onclick="searchBaby()">Search Baby</button>
