Refactor: remove form container from adding a new baby

--- a/views/html/babiesform.html
+++ b/views/html/babiesform.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register New Baby</title>
     <style>
-        .form-container {
+        /* .form-container {
             width: 80%;
             margin: auto;
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             overflow-y: auto;
-        }
+        } */
 
         .header {
             text-align: center;
